Add new field "section".
Task #060109

--- a/view/party_edi_form.xml
+++ b/view/party_edi_form.xml
@@ -22,4 +22,6 @@ this repository contains the full copyright notices and license terms. -->
   <field name="vat"/>
   <label name="country_code"/>
   <field name="country_code"/>
+  <label name="section"/>
+  <field name="section"/>
 </form>
