Update NADSU read function to get the new CIP filed if exist.
Add the translations for the new field in edi party.

Fix PEP8

Task: #072931

--- a/view/party_edi_form.xml
+++ b/view/party_edi_form.xml
@@ -24,4 +24,6 @@ this repository contains the full copyright notices and license terms. -->
   <field name="country_code"/>
   <label name="section"/>
   <field name="section"/>
+  <label name="cip"/>
+  <field name="cip"/>
 </form>
